SERVER-76988 Abort the reshardCollection operation when the zone information is too large